--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
+<!-- * * * * * * * to get started with your project!  * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <style>
@@ -21,13 +21,11 @@
   h2,
   h3,
   h4,
+  h5,
   h6 {
     margin: 8px 0;
   }
 
-  p {
-    margin: 0;
-  }
 
   .spacer {
     flex: 1;
